# fim

./: .git-blame-ignore-revs  dune-project  fim.opam
lib/: buffer.ml  command.ml  dune  motion.ml  move.ml  navigation.ml  parser.ml  parser.mli  state.ml  text_buffer.ml  types.ml  ui.ml  zipper.ml  zipper.mli
presentations/01-intro/: notes.typ  presentation.typ
test/: dune
